# small-deck

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: agent-build.yml
src/: app.js  i18n.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: icons.rs  launcher.rs  lib.rs  main.rs  store.rs  xpad.rs
